--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -1,10 +1,10 @@
 # TRAINS-AGENT configuration file
 api {
-    api_server: https://demoapi.trainsai.io
-    web_server: https://demoapp.trainsai.io
-    files_server: https://demofiles.trainsai.io
+    api_server: https://demoapi.trains.allegro.ai
+    web_server: https://demoapp.trains.allegro.ai
+    files_server: https://demofiles.trains.allegro.ai
 
-    # Credentials are generated in the webapp, https://demoapp.trainsai.io/profile
+    # Credentials are generated in the webapp, https://demoapp.trains.allegro.ai/profile
     # Overridden with os environment: TRAINS_API_ACCESS_KEY / TRAINS_API_SECRET_KEY
     credentials {"access_key": "EGRTCO8JMSIGI6S39GTP43NFWXDQOW", "secret_key": "x!XTov_G-#vspE*Y(h$Anm&DIc5Ou-F)jsl$PdOyj5wG1&E!Z8"}
 
@@ -41,7 +41,7 @@ agent {
         force_upgrade: false,
 
         # additional artifact repositories to use when installing python packages
-        # extra_index_url: ["https://allegroai.jfrog.io/trainsai/api/pypi/public/simple"]
+        # extra_index_url: ["https://allegroai.jfrog.io/trains/api/pypi/public/simple"]
         extra_index_url: []
 
         # additional conda channels to use when installing with conda package manager
