Add --gpus / --cpu-only (equivalent to NVIDIA_VISIBLE_DEVICE) Add agent.python_binary specifying full path to python binary to use for virtual environement creation Fix Windows support

--- a/trains_agent/backend_api/config/default/agent.conf
+++ b/trains_agent/backend_api/config/default/agent.conf
@@ -13,6 +13,11 @@
     # git_user: ""
     # git_pass: ""
 
+    # Set the python version to use when creating the virtual environment and launching the experiment
+    # Example values: "/usr/bin/python3" or "/usr/local/bin/python3.6"
+    # The default is the python executing the trains_agent
+    python_binary: ""
+
     # select python package manager:
     # currently supported pip and conda
     # poetry is used if pip selected and repository contains poetry.lock file
