--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -29,6 +29,11 @@ agent {
     # worker_name: "trains-agent-machine1"
     worker_name: ""
 
+    # Set the python version to use when creating the virtual environment and launching the experiment
+    # Example values: "/usr/bin/python3" or "/usr/local/bin/python3.6"
+    # The default is the python executing the trains_agent
+    python_binary: ""
+
     # select python package manager:
     # currently supported pip and conda
     # poetry is used if pip selected and repository contains poetry.lock file
@@ -109,6 +114,11 @@ sdk {
         # (e.g. debug image event), file names for the uploaded files will be recycled in such a way that no more than
         # X files are stored in the upload destination for each metric/variant combination.
         file_history_size: 100
+
+        # Max history size for matplotlib imshow files per plot title.
+        # File names for the uploaded images will be recycled in such a way that no more than
+        # X images are stored in the upload destination for each matplotlib plot title.
+        matplotlib_untitled_history_size: 100
 
         # Settings for generated debug images
         images {
