--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -40,6 +40,10 @@ agent {
     package_manager: {
         # supported options: pip, conda
         type: pip,
+
+        # specify pip version to use (examples "<20", "==19.3.1", "", empty string will install the latest version)
+        # pip_version: "<20"
+
         # virtual environment inheres packages from system
         system_site_packages: false,
         # install with --upgrade
