Add poetry to the list of supported package managers

--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -38,7 +38,7 @@ agent {
     # currently supported pip and conda
     # poetry is used if pip selected and repository contains poetry.lock file
     package_manager: {
-        # supported options: pip, conda
+        # supported options: pip, conda, poetry
         type: pip,
 
         # specify pip version to use (examples "<20", "==19.3.1", "", empty string will install the latest version)
