Fix comments in config files

--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -82,9 +82,9 @@ agent {
     # reload configuration file every daemon execution
     reload_config: false,
 
-    # pip cache folder used mapped into docker, for python package caching
+    # pip cache folder mapped into docker, used for python package caching
     docker_pip_cache = ~/.trains/pip-cache
-    # apt cache folder used mapped into docker, for ubuntu package caching
+    # apt cache folder mapped into docker, used for ubuntu package caching
     docker_apt_cache = ~/.trains/apt-cache
 
     # optional arguments to pass to docker image
