Add agent.force_git_ssh_protocol option to force all git links to ssh:// (issue #16) Add git user/pass credentials for pip git packages (git+http and  git+ssh) (issue #22)

--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -13,11 +13,13 @@ api {
 }
 
 agent {
-    # Set GIT user/pass credentials
-    # leave blank for GIT SSH credentials
+    # Set GIT user/pass credentials (if user/pass are set, GIT protocol will be set to https)
+    # leave blank for GIT SSH credentials (set force_git_ssh_protocol=true to force SSH protocol)
     git_user=""
     git_pass=""
 
+    # Force GIT protocol to use SSH regardless of the git url (Assumes GIT user/pass are blank)
+    force_git_ssh_protocol: false
 
     # unique name of this worker, if None, created based on hostname:process_id
     # Overridden with os environment: TRAINS_WORKER_NAME
@@ -109,6 +111,11 @@ agent {
         # optional arguments to pass to docker image
         # arguments: ["--ipc=host"]
     }
+
+    # CUDA versions used for Conda setup & solving PyTorch wheel packages
+    # it Should be detected automatically. Override with os environment CUDA_VERSION / CUDNN_VERSION
+    # cuda_version: 10.1
+    # cudnn_version: 7.6
 }
 
 sdk {
