--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -19,7 +19,7 @@ agent {
     git_pass=""
     # Limit credentials to a single domain, for example: github.com,
     # all other domains will use public access (no user/pass). Default: always send user/pass for any VCS domain
-    git_domain=""
+    git_host=""
 
     # Force GIT protocol to use SSH regardless of the git url (Assumes GIT user/pass are blank)
     force_git_ssh_protocol: false
