--- a/docs/trains.conf
+++ b/docs/trains.conf
@@ -62,6 +62,7 @@ agent {
 
         # additional conda channels to use when installing with conda package manager
         conda_channels: ["pytorch", "conda-forge", ]
+        # conda_full_env_update: false
 
         # set the priority packages to be installed before the rest of the required packages
         # priority_packages: ["cython", "numpy", "setuptools", ]
