--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-attrs>=18.0
-enum34>=0.9 ; python_version < '3.6'
-furl>=2.0.0
-future>=0.16.0
-humanfriendly>=2.1
-jsonschema>=2.6.0
-pathlib2>=2.3.0
-psutil>=3.4.2
-pyhocon>=0.3.38
-pyparsing>=2.0.3
-python-dateutil>=2.4.2
-pyjwt>=1.6.4
-PyYAML>=3.12
-requests-file>=1.4.2
-requests>=2.20.0
-six>=1.11.0
-tqdm>=4.19.5
-typing>=3.6.4
-urllib3>=1.21.1
+attrs>=18.0,<20.4.0
+enum34>=0.9,<1.2.0 ; python_version < '3.6'
+furl>=2.0.0,<2.2.0
+future>=0.16.0,<0.19.0
+humanfriendly>=2.1,<9.2
+jsonschema>=2.6.0,<3.3.0
+pathlib2>=2.3.0,<2.4.0
+psutil>=3.4.2,<5.9.0
+pyhocon>=0.3.38,<0.4.0
+pyparsing>=2.0.3,<2.5.0
+python-dateutil>=2.4.2,<2.9.0
+pyjwt>=1.6.4,<2.0.0
+PyYAML>=3.12,<5.4.0
+requests-file>=1.4.2,<1.6.0
+requests>=2.20.0,<2.26.0
+six>=1.11.0,<1.16.0
+tqdm>=4.19.5,<4.55.0
+typing>=3.6.4,<3.8.0
+urllib3>=1.21.1,<1.27.0
 virtualenv>=16,<20
