initial clearml-agent v0.17.0

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -1,12 +1,12 @@
 {
     # unique name of this worker, if None, created based on hostname:process_id
-    # Override with os environment: TRAINS_WORKER_ID
-    # worker_id: "trains-agent-machine1:gpu0"
+    # Override with os environment: CLEARML_WORKER_ID
+    # worker_id: "clearml-agent-machine1:gpu0"
     worker_id: ""
 
     # worker name, replaces the hostname when creating a unique name for this worker
-    # Override with os environment: TRAINS_WORKER_NAME
-    # worker_name: "trains-agent-machine1"
+    # Override with os environment: CLEARML_WORKER_NAME
+    # worker_name: "clearml-agent-machine1"
     worker_name: ""
 
     # Set GIT user/pass credentials (if user/pass are set, GIT protocol will be set to https)
@@ -22,7 +22,7 @@
 
     # Set the python version to use when creating the virtual environment and launching the experiment
     # Example values: "/usr/bin/python3" or "/usr/local/bin/python3.6"
-    # The default is the python executing the trains_agent
+    # The default is the python executing the clearml_agent
     python_binary: ""
 
     # select python package manager:
@@ -42,7 +42,7 @@
         force_upgrade: false,
 
         # additional artifact repositories to use when installing python packages
-        # extra_index_url: ["https://allegroai.jfrog.io/trainsai/api/pypi/public/simple"]
+        # extra_index_url: ["https://allegroai.jfrog.io/clearmlai/api/pypi/public/simple"]
 
         # additional conda channels to use when installing with conda package manager
         conda_channels: ["defaults", "conda-forge", "pytorch", ]
@@ -73,12 +73,12 @@
     },
 
     # target folder for virtual environments builds, created when executing experiment
-    venvs_dir = ~/.trains/venvs-builds
+    venvs_dir = ~/.clearml/venvs-builds
 
     # cached git clone folder
     vcs_cache: {
         enabled: true,
-        path: ~/.trains/vcs-cache
+        path: ~/.clearml/vcs-cache
     },
 
     # use venv-update in order to accelerate python virtual environment building
@@ -90,7 +90,7 @@
     # cached folder for specific python package download (used for pytorch package caching)
     pip_download_cache {
         enabled: true,
-        path: ~/.trains/pip-download-cache
+        path: ~/.clearml/pip-download-cache
     },
 
     translate_ssh: true,
@@ -98,9 +98,9 @@
     reload_config: false,
 
     # pip cache folder mapped into docker, used for python package caching
-    docker_pip_cache = ~/.trains/pip-cache
+    docker_pip_cache = ~/.clearml/pip-cache
     # apt cache folder mapped into docker, used for ubuntu package caching
-    docker_apt_cache = ~/.trains/apt-cache
+    docker_apt_cache = ~/.clearml/apt-cache
 
     # optional arguments to pass to docker image
     # these are local for this agent and will not be updated in the experiment's docker_cmd section
