--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -1,4 +1,4 @@
-# CLEARML-AGENT configuration file - Please use ~/clearml.conf
+# CLEARML-AGENT configuration file
 api {
     api_server: https://demoapi.demo.clear.ml
     web_server: https://demoapp.demo.clear.ml
