Update agent and services docker files

--- a/docker/services/Dockerfile
+++ b/docker/services/Dockerfile
@@ -19,7 +19,7 @@ RUN locale-gen en_US.UTF-8
 RUN apt-get install -y curl python3-pip git
 RUN curl -sSL https://get.docker.com/ | sh
 RUN python3 -m pip install -U pip
-RUN python3 -m pip install trains-agent
+RUN python3 -m pip install clearml-agent
 RUN python3 -m pip install -U "cryptography>=2.9"
 
 ENTRYPOINT ["/usr/agent/entrypoint.sh"]
