Add venv caching with docker mode support

--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -78,6 +78,15 @@
     venvs_dir = ~/.clearml/venvs-builds
 
     # cached git clone folder
+    venvs_cache: {
+        # unmark to enable venv caching
+        # path: ~/.clearml/venvs-cache
+        max_entries: 10
+        # minimum required free space to allow for cache entry, disable by passing 0 or negative value
+        free_space_threshold_gb: 2.0
+    },
+
+    # cached git clone folder
     vcs_cache: {
         enabled: true,
         path: ~/.clearml/vcs-cache
