Add venvs_cache configuration

--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -89,6 +89,16 @@ agent {
     # target folder for virtual environments builds, created when executing experiment
     venvs_dir = ~/.clearml/venvs-builds
 
+    # cached virtual environment folder
+    venvs_cache: {
+        # maximum number of cached venvs
+        max_entries: 10
+        # minimum required free space to allow for cache entry, disable by passing 0 or negative value
+        free_space_threshold_gb: 2.0
+        # unmark to enable virtual environment caching
+        # path: ~/.clearml/venvs-cache
+    },
+
     # cached git clone folder
     vcs_cache: {
         enabled: true,
