--- a/clearml_agent/backend_api/config/default/agent.conf
+++ b/clearml_agent/backend_api/config/default/agent.conf
@@ -77,13 +77,14 @@
     # target folder for virtual environments builds, created when executing experiment
     venvs_dir = ~/.clearml/venvs-builds
 
-    # cached git clone folder
+    # cached virtual environment folder
     venvs_cache: {
-        # unmark to enable venv caching
-        # path: ~/.clearml/venvs-cache
+        # maximum number of cached venvs
         max_entries: 10
         # minimum required free space to allow for cache entry, disable by passing 0 or negative value
         free_space_threshold_gb: 2.0
+        # unmark to enable virtual environment caching
+        # path: ~/.clearml/venvs-cache
     },
 
     # cached git clone folder
