--- a/docs/clearml.conf
+++ b/docs/clearml.conf
@@ -147,6 +147,9 @@ agent {
         # arguments: ["--ipc=host"]
     }
 
+    # set the OS environments based on the Task's Environment section before launching the Task process.
+    enable_task_env: false
+
     # CUDA versions used for Conda setup & solving PyTorch wheel packages
     # it Should be detected automatically. Override with os environment CUDA_VERSION / CUDNN_VERSION
     # cuda_version: 10.1
